web/libraries/fractal/components/tests/filter/fail/timezone-name.twig
{# Central European Time (Paris) #}
{{ 'Europe/Paris'|timezone_name }} <br>

{# Pacific Time (Los Angeles) #}
{{ 'America/Los_Angeles'|timezone_name }} <br>

{# heure du Pacifique nord-américain (Los Angeles) #}
{{ 'America/Los_Angeles'|timezone_name('fr') }} <br>

